<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Time for Coffee!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title">Time for Coffee!</string>
    <string name="tab_stations">Stations</string>
    <string name="tab_departures">Departures</string>
    <string name="tab_favorites">Favorites</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_favorite">Add to favorites</string>
    <string name="title_loading_position">We are trying to locate you…</string>
    <string name="title_no_stations">No stations found</string>
    <string name="title_enter_search">"Enter your search"</string>
    <string name="title_no_favorites">No favorites</string>
    <string name="title_no_departures">No departures</string>
    <string name="title_add_favorite_end">to add a station as favorite</string>
    <string name="title_add_favorite_start">Tap on the icon</string>
    <string name="platform">- Pl: %s</string>
    <string name="retry">Retry</string>
    <string name="network_error">Network error!</string>
    <string name="permission_message">We need permission to access your location, so we can get the nearest stations.</string>
    <string name="permission_allow">"Allow access"</string>
    <string name="permission_dont_allow">"Don't allow"</string>
    <string name="permission_no_location">"You didn't granted the permission to access your location"</string>
    <string name="grant">Grant</string>
    <string name="activate">Activate</string>
    <string name="location_service_off">Localisation service is deactivated</string>
    <string name="location_service_gps_only">Localisation service is set to use only the GPS. Please use another location mode.</string>
    <string name="location_service_gps_only_settings">Go to settings</string>
    <string name="timeForCoffee_url">http://app.timeforcoffee.ch/</string>
    <string name="timeForCoffee_twitter_name">"@time4coffeeApp"</string>
    <string name="timeForCoffee_twitter_id">"3043101919"</string>
    <string name="timeForCoffee_version">Version %s (%d)</string>
    <string name="timeForCoffee_about_idea">Idea, Website and API by</string>
    <string name="francois_terrier">François Terrier /</string>
    <string name="francois_terrier_twitter_name">"@fterrier"</string>
    <string name="francois_terrier_twitter_id">"14814373"</string>
    <string name="timeForCoffee_about_ios_app">iOS app by</string>
    <string name="christian_stocker">Christian Stocker /</string>
    <string name="christian_stocker_twitter_name">"@chregu"</string>
    <string name="christian_stocker_twitter_id">"6173342"</string>
    <string name="jan_hug">Jan Hug /</string>
    <string name="jan_hug_twitter_name">"@dulnan"</string>
    <string name="jan_hug_twitter_id">"15483616"</string>
    <string name="cyril_gabathuler">Cyril Gabathuler /</string>
    <string name="cyril_gabathuler_twitter_name">"@gabac"</string>
    <string name="cyril_gabathuler_twitter_id">"5908302"</string>
    <string name="timeForCoffee_about_android_app">Android app by</string>
    <string name="fabio_santschi">Fabio Santschi /</string>
    <string name="fabio_santschi_twitter_name">"@kimchiverse"</string>
    <string name="fabio_santschi_twitter_id">"14919002"</string>
    <string name="nicolas_dougoud">Nicolas Dougoud /</string>
    <string name="nicolas_dougoud_twitter_name">"@abramov_no7"</string>
    <string name="nicolas_dougoud_twitter_id">"17496639"</string>
    <string name="luca_sardonini">Luca Sardonini /</string>
    <string name="luca_sardonini_github_username">"@lucasardonini"</string>
    <string name="pascal_cudre">Pascal Cudré /</string>
    <string name="pascal_cudre_github_username">"@friedrichIII"</string>
    <string name="sylvain_nicolet">Sylvain Nicolet /</string>
    <string name="sylvain_nicolet_github_username">"@sylvainnicolet"</string>
    <string name="title_activity_about">About</string>
    <string name="station_search_placeholder">Find station...</string>
    <string name="station_search_error">Minimum 2 characters</string>
    <string name="connection_departure">Dep: </string>
    <string name="connection_arrival">Arr: </string>
    <string name="connection_from">From</string>
    <string name="departure_fav_message" formatted="false">%s %s has been %s %s your favorite list</string>
    <string name="departure_action_add">added</string>
    <string name="departure_action_add_2">to</string>
    <string name="departure_action_remove">removed</string>
    <string name="departure_action_remove_2">from</string>
    <string name="map_loading">Loading…</string>
    <string name="slash">/</string>
</resources>
