<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView android:id="@id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawSelectorOnTop="false"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/noStationsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/title_no_stations"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loadingPositionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:id="@+id/loadingPositionSpinner"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/loadingPositionSpinner"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/title_loading_position" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/enterSearchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/title_enter_search"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"/>

    </RelativeLayout>

</RelativeLayout>
