<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Zürich, Albisrieden" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:text="@string/connection_arrival"
                />

            <TextView
                android:id="@+id/arrival_realtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                tools:text="00:00"/>

            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                tools:text="00:00" />

            <TextView
                android:id="@+id/slash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:text="@string/slash"
                />

            <TextView
                android:id="@+id/departure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:text="@string/connection_departure" />

            <TextView
                android:id="@+id/departure_realtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                tools:text="00:00"/>

            <TextView
                android:id="@+id/departure_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                tools:text="00:00" />

        </LinearLayout>

    </LinearLayout>

    <TextView android:id="@+id/minutes"
        tools:text="5'"
        android:textSize="18sp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:gravity="center"/>

</LinearLayout>
